# repochat-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md
examples/: demo.py
src/repochat/: __init__.py  cli.py  version.py
src/repochat/ai/: chat_engine.py  embedder.py  vector_store.py
src/repochat/core/: chunker.py  clone_repo.py  config.py  file_loader.py
src/utils/: helpers.py  logger.py
tests/: test_chat.py
